rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@outcomes-OutcomesProcessor-outcomes__1__outcomes-lb.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"project_id\": 1,\n  \"logging.googleapis.com/labels\": {\n    \"host\": \"lb-6\"\n  },\n  \"org_id\": 0,\n  \"outcome\": 4,\n  \"timestamp\": \"2023-03-28T18:50:39.463685Z\"\n}\n"
expression: snapshot_payload
---
[
  {
    "category": 1,
    "event_id": null,
    "key_id": null,
    "org_id": 0,
    "outcome": 4,
    "project_id": 1,
    "quantity": 1,
    "quantity64": 1,
    "reason": null,
    "timestamp": 1680029439
  }
]
