rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@outcomes-OutcomesProcessor-outcomes__1__outcomes-relay-internal.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"timestamp\": \"2023-03-28T22:53:00.000000Z\",\n  \"project_id\": 1,\n  \"outcome\": 3,\n  \"reason\": \"project_id\",\n  \"source\": \"relay-internal\",\n  \"category\": 1,\n  \"quantity\": 1\n}\n"
expression: snapshot_payload
---
[
  {
    "category": 1,
    "event_id": null,
    "key_id": null,
    "org_id": 0,
    "outcome": 3,
    "project_id": 1,
    "quantity": 1,
    "quantity64": 1,
    "reason": "project_id",
    "timestamp": 1680043980
  }
]
